# cs236

./: CMakeLists.txt
Project/: Database.h  DatalogProgram.h  Graph.h  Interpreter.h  Node.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scheme.h  Tuple.h  a.out  main.cpp  test.txt
Project1/: Scanner.h  Token.h  a.out  main.cpp
Project2/: DatalogProgram.h  Parameter.h  Parser.h  Predicate.h  Rule.h  Token.h  a.out  main.cpp
Project3/: Database.h  DatalogProgram.h  Interpreter.h  Parameter.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scheme.h  Tuple.h  a.out  main.cpp
lab0-tests/lab0/: hello.cpp
lab1/: Scanner.h  Token.h  main.cpp
lab2/: Parser.h  Token.h  a.out  main.cpp
lab3/: Predicate.h  Relation.h  Scheme.h  Tuple.h  a.out  main.cpp
